# BetterPanely

./: .gitignore  index.html  package-lock.json  package.json  pytest.ini  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-06-29-workbench-implementation.md
docs/superpowers/specs/: 2026-06-29-workbench-design.md
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/builtin_tools/: mod.rs
src-tauri/src/commands/: embed_cmds.rs  mod.rs  panel_cmds.rs  settings_cmds.rs  tool_cmds.rs  workbench_cmds.rs
src-tauri/src/drag_capture/: hook.rs  hotkey.rs  mod.rs  monitor.rs
src-tauri/src/locales/: mod.rs
src-tauri/src/panel_manager/: container.rs  mod.rs  panel.rs
src-tauri/src/thumbnail/: dwm.rs  manager.rs  mod.rs
src-tauri/src/window_embedder/: enumerator.rs  mod.rs  setparent.rs
src/components/: AddPanelDialog.tsx  PanelFrame.tsx  ThumbPanel.tsx  ToolPanel.tsx  WindowPicker.tsx  WorkbenchCanvas.tsx
src/lib/: i18n.tsx  panel-api.ts  settings-api.ts  snap-engine.ts  theme.ts  types.ts  workbench-api.ts
src/lib/locales/: en.json  zh.json
src/tools/calculator/: index.html
src/tools/notes/: index.html
src/tools/settings/: index.html
src/tools/timer/: index.html
src/tools/weather/: index.html
tests/: conftest.py  pytest.ini  requirements.txt  test_basic.py  test_embed.py  test_i18n.py  test_workbench.py
tests/helpers/: win32_helper.py
