[package]
name = "better-panely"
version = "0.1.0"
description = "Windows desktop multi-panel tool with window embedding"
authors = ["BetterPanely"]
edition = "2021"

[lib]
name = "better_panely_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_Graphics_Dwm",
    "Win32_Security",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
